# perceptive_mpc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  perceptive_mpc_https.rosinstall  perceptive_mpc_ssh.rosinstall
config/: admittance_task.info  demo.rviz  kinematic_simulation_parameters.yaml  task.info  voxblox.yaml
example/: KinematicSimulation.cpp  PerceptiveMpcInterface.cpp  interactive_marker.py  kinematic_simulation_node.cpp
include/example/: KinematicSimulation.h  PerceptiveMpcInterface.h
include/perceptive_mpc/: AdmittanceReferenceModule.hpp  Conversions.h  Definitions.h  EsdfCachingServer.hpp  ExplicitTemplateInstantiations.h  ModelSettings.h  OperatingPoint.h  SystemDynamics.h
include/perceptive_mpc/costs/: BaseAvoidanceCost.h  InterpolatePoseTrajectory.h  PointsOnRobot.h  QuadraticEndeffectorTrackingCost.h  StabilitySoftConstraint.h  VoxbloxCost.h
include/perceptive_mpc/kinematics/: KinematicsInterface.hpp
include/perceptive_mpc/kinematics/mabi/: MabiKinematics.hpp
include/perceptive_mpc/kinematics/ur10/: UR10Kinematics.hpp
include/perceptive_mpc/kinematics/ur3/: UR3Kinematics.hpp
include/perceptive_mpc/kinematics/ur5/: UR5Kinematics.hpp
launch/: collision_avoidance_demo.launch  demo.launch
msg/: WrenchPoseStamped.msg  WrenchPoseTrajectory.msg
scripts/: load_map.sh  run_demo.sh  run_demo_collision_avoidance.sh
src/: AdmittanceReferenceModule.cpp  Conversions.cpp  EsdfCachingServer.cpp  ExplicitTemplateInstantiations.cpp  OperatingPoint.cpp  SystemDynamics.cpp
src/costs/: BaseAvoidanceCost.cpp  PointsOnRobot.cpp  QuadraticEndeffectorTrackingCost.cpp  StabilitySoftConstraint.cpp  VoxbloxCost.cpp
src/kinematics/: KinematicsInterface.cpp
src/kinematics/mabi/: MabiKinematics.cpp
src/kinematics/ur10/: UR10Kinematics.cpp
src/kinematics/ur3/: UR3Kinematics.cpp
src/kinematics/ur5/: UR5Kinematics.cpp
urdf/mabi/: mabi_mobile.urdf
urdf/mabi/meshes/: R212.STL  RKL100.stl  arm.STL  base_simplified.stl  elbow.STL  forearm.STL  shoulder.STL  tool.STL  wheel_simplified.stl  wrist.STL
